/*
 * $Id: ChangeLog,v 1.2674 2004/03/29 03:43:38 peterrees Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-29 08:12 UTC-0500 Sylvain Robert (s.robert/at/videotron.ca)
  * contrib\hbzlib\zip.c
    ZipCreateArray()
    ! Add full path to the file to ZIP when not given by the user
    HB_ZIPFILE()
    ! Add full path to the zip filename when not given by the user
    ; This correct all problem reported by Jerzy on news.xharbour.org

    HB_ZIPFILEBYPKSPAN()
    ! Save and restore to the current directory after ZipCreateArray()

    HB_ZIPFILEBYTDSPAN()
    ! Save and restore to the current directory after ZipCreateArray()
    ! Add full path to the zip filename when not given by the user

  * contrib\hbzlib\zipcomp.cpp
    hb_compressfile()
    ! Fixed possiblility that the current Zipfile was added to the archive

2004-03-29 15:54 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwvt/gtwvt.c
    - Posted correct file re previous post

2004-03-29 14:54 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwin/gtwin.c
    - '*' & '+' on Keypad fied when CapsLock ON

2004-03-29 12:15 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwvt/gtwvt.c
    - fix handling of Scroll Lock key

2004-03-29 10:35 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/accept.c
    - respect K_ALT_C and only accept Keyboard entry

2004-03-28 20:12 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/rtl/errorsys.prg
  * source/rtl/win32ole.prg
    ! Changed Windows header file names to lowercase to allow
      cross-compiling from Unix via MinGW.

2004-03-28 19:30 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * tests/macro.prg
    + Added some tests for Clipper compatibility of &() and Type().

2004-03-28 19:20 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/compiler/harbour.slx