@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2674 2004/03/29 03:43:38 peterrees Exp $
+ * $Id: ChangeLog,v 1.2675 2004/03/29 14:29:41 srobert Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-03-29 09:14 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbinit.h
+    ! Fixed HB_CALL_ON_STARTUP_END to return 0 instead of 1 - MSVC 7 compatability.
+
+  * source/vm/arrays.c
+  * source/vm/hash.c
+  * source/vm/memvars.c
+    ! Fixed Garbage Functions to defer all complex items except Strings to GC.
+
 2004-03-29 08:12 UTC-0500 Sylvain Robert (s.robert/at/videotron.ca)
   * contrib\hbzlib\zip.c
     ZipCreateArray()
